--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<div id="ui">
 
 		</div>
-		<div id="board">
-			
-		</div>
+		<canvas id="board">
+
+		</canvas>
 	</div>
 	<script src="script.js"></script>
 </body>
